# Rate-My-Professor

./: .dockerignore  .gitignore  .prettierrc  .vercelignore  Dockerfile  package-lock.json  package.json  reviews.json  setup_rag.py  tsconfig.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/: app.py  embeddings.py  models.py  pinecone_client.py
src/app/: layout.tsx  page.tsx
src/app/api/chat/: route.ts
src/app/api/getMetadata/: route.ts
src/app/api/recommendProfessors/: route.ts
src/app/api/scrape/: route.ts
src/app/api/scrape-professor/: route.ts
src/app/components/: AdvancedFormSelectField.tsx  AdvancedSearchForm.tsx  ChatComponent.tsx  LandingPage.tsx  ProfessorSearch.tsx  TopBar.tsx  UrlSubmissionForm.tsx
src/app/search/: page.tsx
src/app/submit-url/: page.tsx
src/hooks/: useChat.ts  useMetadataSets.ts  useProfessorRecommendations.ts  useProfessorScraper.ts  useUpsertProfessor.ts
src/lib/utils/: createPromptTemplate.ts  dateUtils.ts  fetchPineconeMetadata.ts  pineconeMetadata.ts  rateMyProfScraper.ts  retriever.ts
src/styles/: theme.ts
src/types/: pineconeMetadata.ts  professorDataTypes.ts  professorSearchQuery.ts  review.ts  theme.d.ts
