[tool.poetry]
name = "rate-my-professor"
version = "0.1.0"
description = "Python backend for generating embeddings and upserting scraped data into pinecone."
authors = ["peppapig450 <nbgenius1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
sentence-transformers = "^3.0.1"
torch = "^2.4.0"
pinecone-client = "^5.0.1"
flask = "^3.0.3"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
